--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "tsc && node dist/app.js",
+    "dev": "tsx watch src/app.ts",
     "lint": "eslint ."
   },
   "keywords": [],
@@ -22,6 +23,7 @@
     "@types/express": "^5.0.0",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.13.0"
   }
