--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "firebase-admin": "^12.6.0"
+    "firebase-admin": "^12.6.0",
+    "http-status-codes": "^2.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
