--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase-admin": "^12.6.0",
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
+    "puppeteer": "^24.4.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
