--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "start": "tsc && node dist/app.js",
     "dev": "tsx watch src/app.ts",
@@ -27,7 +27,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.0",
+    "@types/semver": "^7.7.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
     "tsx": "^4.19.2",
