--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,18 @@
   "compilerOptions": {
     "module": "NodeNext",
     "esModuleInterop": true,
-    "target": "es6",
+    "target": "ES2020",
     "moduleResolution": "nodenext",
     "sourceMap": true,
     "outDir": "dist",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "rootDir": "src",
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": "./src/api/v1"
   },
-  "lib": ["es2015"]
+  "lib": ["ES2020"],
+  "include": ["src/**/*.ts", "src/**/*.json"],
+  "exclude": ["node_modules", "dist", "src/**/*.spec.ts"]
 }
